--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
 <style>
 
 /*    Escribe aqui tu codigo de CSS    */
+nav {
+    width: 25%;
+    float: left;
+}
 
+.section-container {
+    width: 50%;
+    display: inline-block;
+}
+aside {
+    float: right;
+    display: inline-block;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    background-color: black;
+    width: 100vw;
+    color: white;
+}
 
 </style>
 
